# DataScience-workshop

./: api.py  classification_using_neural_network.ipynb  dayy11_classification.ipynb  dayy12_confusion_matrix_heatmap.ipynb  dayy13_Kmeans_clustering.ipynb  dayy7.ipynb  main.py  pandas1.py  pd_day3.ipynb  pd_day4.ipynb  pd_day5_outliers.ipynb  pd_day6_scaliing.ipynb  projectPractice.ipynb  pyproject.toml  scipytTest.ipynb  simple_linear_regresssion_using_neural_network.ipynb  tempCodeRunnerFile.py
02_numpy_pandas/: main.py  pyproject.toml
titanic_data_analysis/: main.py  pyproject.toml
